fix: align notification list on right on rtl languages. ticket 205

--- a/cosinnus/static/less/rtl.less
+++ b/cosinnus/static/less/rtl.less
@@ -144,4 +144,9 @@ html[dir="rtl"] {
             text-align: left;
         }
     }
+
+    .v2-navbar .nav-flyout.nav-flyout-right {
+        left: inherit;
+        right: initial;
+    }
 }
